# junoclaw

./: .dockerignore  .env.example  .gitattributes  .gitignore  AKASH_TWEET_THREAD.md  ANNOUNCEMENT.md  ANNOUNCEMENT_MEDIUM.md  CHANGELOG.md  COSMOS_MCP_ARTICLE.md  Cargo.toml  FINAL_UPDATE_ARTICLE.md  JUNOSWAP_GOVERNANCE_ARTICLE.md  LICENSE  MEDIUM_STANDALONE_ARTICLE.md  MEDIUM_UPDATE_BRIEF.md  MIDJOURNEY_PROMPT.md  NEXT_STEPS.md  PRODUCT.md  README.md  SECURITY.md  TEE_MILESTONE_ARTICLE.md  TEE_MILESTONE_TWEET_THREAD.md  TWEET_THREAD.md  UPDATE_MEDIUM_ADDENDUM.md  UPDATE_TWEET_REPLY.md  VALIDATOR_PROPOSAL_THREAD.md  ZK_PRECOMPILE_ARTICLE.md  config.example.toml  cosign.pub  progress.txt
aegis-bench/: Cargo.toml  README.md
aegis-bench/artifacts/: localnet-bandwidth-N4-aegis.json  verify-amd64.json  verify-arm64.json
aegis-bench/cmd/hybrid-consensus-keygen/: go.mod  go.sum  main.go
aegis-bench/src/: main.rs
aegis-kem-diff/: ACVP_WIRING.md  Cargo.toml  README.md
aegis-kem-diff/src/: main.rs
circuits/moultbook-membership/: Cargo.toml
circuits/moultbook-membership/src/: lib.rs
contracts/: Cargo.toml
contracts/.cargo/: config.toml
contracts/agent-company/: Cargo.toml  DETERMINISTIC_AUDIT.md
contracts/agent-company/src/: contract.rs  error.rs  integration.rs  lib.rs  msg.rs  state.rs  tests.rs
contracts/agent-registry/: Cargo.toml  DETERMINISTIC_AUDIT.md
contracts/agent-registry/src/: contract.rs  error.rs  msg.rs  state.rs  tests.rs
contracts/builder-grant/: Cargo.toml  DETERMINISTIC_AUDIT.md
contracts/builder-grant/src/: contract.rs  error.rs  msg.rs  state.rs  tests.rs
contracts/escrow/: Cargo.toml  DETERMINISTIC_AUDIT.md
contracts/escrow/src/: contract.rs  error.rs  msg.rs  state.rs  tests.rs
contracts/faucet/: Cargo.toml  DETERMINISTIC_AUDIT.md
contracts/faucet/src/: contract.rs  error.rs  msg.rs  state.rs  tests.rs
contracts/ibc-task-host/: Cargo.toml
contracts/ibc-task-host/src/: contract.rs  error.rs  msg.rs  state.rs  tests.rs
contracts/jclaw-credential/: Cargo.toml  run-tests.sh
contracts/jclaw-credential/examples/: gen_mldsa_vectors.rs
contracts/jclaw-credential/src/: contract.rs  error.rs  lib.rs  mayo_vectors.rs  mldsa_vectors.rs  msg.rs  state.rs  tests.rs
contracts/junoclaw-common/: Cargo.toml
contracts/junoclaw-common/src/: lib.rs
contracts/junoswap-factory/: Cargo.toml  DETERMINISTIC_AUDIT.md
contracts/junoswap-factory/src/: contract.rs  error.rs  msg.rs  state.rs  tests.rs
contracts/junoswap-pair/: Cargo.toml  DETERMINISTIC_AUDIT.md
contracts/junoswap-pair/src/: contract.rs  error.rs  msg.rs  state.rs  tests.rs
contracts/knowledge-moults/: Cargo.toml  README.md
contracts/knowledge-moults/src/: contract.rs  error.rs  msg.rs  state.rs  tests.rs
contracts/moultbook/: DESIGN.md
contracts/moultbook-v0/: Cargo.toml  DETERMINISTIC_AUDIT.md  README.md
contracts/moultbook-v0/src/: contract.rs  error.rs  msg.rs  state.rs  tests.rs
contracts/skill-registry/: Cargo.toml
contracts/skill-registry/src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs  tests.rs
contracts/task-ledger/: Cargo.toml  DETERMINISTIC_AUDIT.md
contracts/task-ledger/src/: contract.rs  error.rs  msg.rs  state.rs  tests.rs
contracts/zk-verifier/: Cargo.toml  DETERMINISTIC_AUDIT.md  README.md  README_PRECOMPILE.md
contracts/zk-verifier/examples/: differential_test.rs  generate_proof.rs
contracts/zk-verifier/src/: bn254_backend.rs  contract.rs  error.rs  lib.rs  msg.rs  state.rs  tests.rs
crates/junoclaw-cli/: Cargo.toml
crates/junoclaw-cli/src/: main.rs
crates/junoclaw-core/: Cargo.toml
crates/junoclaw-core/src/: config.rs  error.rs  lib.rs  mayo.rs  plugin.rs  types.rs
crates/junoclaw-daemon/: Cargo.toml
crates/junoclaw-daemon/src/: main.rs  state.rs
crates/junoclaw-github-agent/: Cargo.toml
crates/junoclaw-github-agent/src/: lib.rs
crates/junoclaw-ibc-relay/: Cargo.toml
crates/junoclaw-ibc-relay/src/: config.rs  error.rs  lib.rs  memo.rs  relay.rs
crates/junoclaw-mayo-verify/: Cargo.toml  README.md
crates/junoclaw-mayo-verify/scripts/: cross-check.sh
crates/junoclaw-mayo-verify/src/: error.rs  gf16.rs  lib.rs  params.rs  verify.rs
crates/junoclaw-nostr-bridge/: Cargo.toml
crates/junoclaw-nostr-bridge/src/: config.rs  event.rs  lib.rs  main.rs  publisher.rs  subscriber.rs  types.rs
crates/junoclaw-runtime/: Cargo.toml
crates/junoclaw-runtime/src/: chain.rs  context_agent.rs  lib.rs  moultbook_operator.rs
crates/junoclaw-x402-gateway/: Cargo.toml  Dockerfile  README.md
crates/junoclaw-x402-gateway/src/: config.rs  cosmos.rs  error.rs  lib.rs  main.rs  routes.rs  x402.rs
crates/junoclaw-x402-gateway/tests/: integration.rs
plugins/plugin-browser/: Cargo.toml
plugins/plugin-browser/src/: lib.rs
plugins/plugin-compute-akash/: Cargo.toml
plugins/plugin-compute-akash/src/: lib.rs
plugins/plugin-llm/: Cargo.toml
plugins/plugin-llm/src/: lib.rs  ollama.rs
plugins/plugin-shell/: Cargo.toml
plugins/plugin-shell/src/: lib.rs
wavs/: .env.example  Cargo.toml  README.md  akash.sdl.yml  azure-fix-namespace.sh  azure-publish-component.sh  azure-publish-final.sh  azure-publish-v2.sh  azure-setup-persistent.sh  azure-start-registry.sh  sdl-args-operator.txt  service.json  wavs.toml
wavs/bridge/: package.json
wavs/bridge/src/: admin-rpc-smoke.ts  benchmark-zk-verifier-devnet.ts  benchmark-zk-verifier.ts  bridge.ts  client.ts  config.ts  deploy-fresh.ts  deploy-junoswap.ts  deploy-migrate.ts  deploy-zk-verifier.ts  e2e-invoke-test.ts  egress-pause-smoke.ts  event-watcher.ts  execute-proposal.ts  fund-deployer.ts  genesis-proposal.ts  get-akash-address.ts  invoke-server.ts  invoke-test.ts  local-compute.ts  local-operator.ts  (+12 more)
wavs/chain-watcher/: README.md  package.json  tsconfig.json
wavs/sealed-signer/: Cargo.toml  M1_BUILD_PLAN.md
wavs/sidecar/: .env.example  docker-compose.yml
wavs/src/: lib.rs  sealed_signer.rs  trigger.rs
wavs/test-fixtures/: governance_watch.json  ibc_health.json  migration_watch.json  whale_alert.json
wavs/warg-registry/: Dockerfile  README.md  entrypoint.sh
(+662 files in other folders)
