[workspace]
members = [
    "crates/junoclaw-core",
    "crates/junoclaw-mayo-verify",
    "crates/junoclaw-runtime",
    "crates/junoclaw-cli",
    "crates/junoclaw-daemon",
    "crates/junoclaw-x402-gateway",
    "crates/junoclaw-github-agent",
    "crates/junoclaw-nostr-bridge",
    "crates/junoclaw-ibc-relay",
    "plugins/plugin-llm",
    "plugins/plugin-compute-local",
    "plugins/plugin-compute-akash",
    "plugins/plugin-storage-local",
    "plugins/plugin-shell",
    "plugins/plugin-ibc",
    "plugins/plugin-browser",
]
exclude = [
    "contracts",
    "wavs",
    "tools/bud-seal",
    # BN254 precompile workspaces — each has its own [workspace] table so
    # they must not be discovered by the root crate's workspace resolver.
    "wasmvm-fork",
    "devnet",
    # ZK circuit crates (use arkworks; standalone build)
    "circuits",
]
resolver = "2"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.43", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Web server
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Cryptography
sha2 = "0.10"
hex = "0.4"
sriracha-mayo = { version = "0.0.4", default-features = false }


[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true
