[package]
name = "junoclaw-common"
version = "0.1.0"
edition = "2021"
description = "Shared types and message definitions for JunoClaw CosmWasm contracts"

[dependencies]
cosmwasm-std = { workspace = true }
cosmwasm-schema = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
