[package]
name = "junoswap-pair"
version = "0.1.0"
edition = "2021"
description = "Junoswap v2 XYK AMM pair — constant-product market maker with JunoClaw WAVS verification hooks"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-std = { workspace = true }
cosmwasm-schema = { workspace = true }
cw-storage-plus = { workspace = true }
cw2 = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
junoclaw-common = { workspace = true }

[dev-dependencies]
cw-multi-test = { workspace = true }
anyhow = { workspace = true }
