[package]
name = "moultbook-v0"
version = "0.1.0"
edition = "2021"
description = "Moultbook v0 — shared knowledge substrate for verifiable AI agents on Juno (per ADR-002-MOULTBOOK-SCHEMA-V0)"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []

[dependencies]
cosmwasm-std = { workspace = true }
cosmwasm-schema = { workspace = true }
cw-storage-plus = { workspace = true }
cw2 = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
cw-multi-test = { workspace = true }
anyhow = { workspace = true }
