[package]
name = "moultbook-v0"
version = "0.1.0"
edition = "2021"
description = "Moultbook v0 — shared knowledge substrate for verifiable AI agents on Juno (per ADR-002-MOULTBOOK-SCHEMA-V0)"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []

[dependencies]
cosmwasm-std = { workspace = true }
cosmwasm-schema = { workspace = true }
cw-storage-plus = { workspace = true }
cw2 = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
thiserror = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
cw-multi-test = { workspace = true }
anyhow = { workspace = true }
# Integration-test deps — ZK proof generation + zk-verifier contract
zk-verifier = { path = "../zk-verifier" }
ark-bn254 = { workspace = true }
ark-groth16 = { workspace = true }
ark-serialize = { workspace = true }
ark-snark = { workspace = true }
ark-std = { workspace = true }
ark-relations = { workspace = true }
ark-ff = { workspace = true }
