[package]
name = "zk-verifier"
version = "0.1.0"
edition = "2021"
description = "JunoClaw PoC: Groth16 BN254 verifier in pure CosmWasm (no precompile)"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-std = { workspace = true }
cosmwasm-schema = { workspace = true }
cw-storage-plus = { workspace = true }
cw2 = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

# ZK dependencies — arkworks ecosystem (versions pinned in workspace)
ark-bn254 = { workspace = true }
ark-groth16 = { workspace = true }
ark-ec = { workspace = true }
ark-ff = { workspace = true }
ark-serialize = { workspace = true }
ark-std = { workspace = true }
ark-relations = { workspace = true }

[dev-dependencies]
cw-multi-test = { workspace = true }
anyhow = { workspace = true }
ark-bn254 = { workspace = true }
ark-groth16 = { workspace = true }
ark-serialize = { workspace = true }
ark-std = { workspace = true }
ark-relations = { workspace = true }
ark-r1cs-std = { workspace = true }
ark-ff = { workspace = true }
ark-snark = { workspace = true }

[features]
default = []
