[package]
name = "zk-verifier"
version = "0.1.0"
edition = "2021"
description = "JunoClaw PoC: Groth16 BN254 verifier in pure CosmWasm (no precompile)"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-std = { workspace = true }
cosmwasm-schema = { workspace = true }
cw-storage-plus = { workspace = true }
cw2 = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

# ZK dependencies — arkworks ecosystem (versions pinned in workspace)
ark-bn254 = { workspace = true }
ark-groth16 = { workspace = true }
ark-ec = { workspace = true }
ark-ff = { workspace = true }
ark-serialize = { workspace = true }
ark-std = { workspace = true }
ark-relations = { workspace = true }

[dev-dependencies]
cw-multi-test = { workspace = true }
anyhow = { workspace = true }
ark-bn254 = { workspace = true }
ark-groth16 = { workspace = true }
ark-serialize = { workspace = true }
ark-std = { workspace = true }
ark-relations = { workspace = true }
ark-r1cs-std = { workspace = true }
ark-ff = { workspace = true }
ark-snark = { workspace = true }

[features]
default = []
# When enabled, VerifyProof routes the pairing check (and the public-input
# linear combination) through the BN254 host functions in a wasmvm-fork
# build. The resulting .wasm will only load on a patched chain — see
# README_PRECOMPILE.md for the build + deploy recipe. Leaving this off
# builds the pure-CosmWasm verifier that already runs on Juno uni-7.
bn254-precompile = ["dep:cosmwasm-std-bn254-ext"]

[dependencies.cosmwasm-std-bn254-ext]
path = "../../wasmvm-fork/cosmwasm-std-bn254-ext"
version = "0.1.0"
features = ["runtime"]
optional = true
