[package]
name = "junoclaw-core"
version = "0.1.0"
edition = "2021"
description = "Core types, plugin traits, and configuration for JunoClaw"

[dependencies]
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# MAYO post-quantum signatures — requires cmake + C toolchain
sriracha-mayo = { workspace = true, optional = true }
rand = { version = "0.8", optional = true }

[features]
default = []
mayo = ["dep:sriracha-mayo", "dep:rand"]
