[package]
name = "junoclaw-mayo-verify"
version = "0.1.0"
edition = "2021"
authors = ["JunoClaw Contributors"]
description = "Pure-Rust MAYO post-quantum signature verifier for CosmWasm (no_std + alloc)"
license = "Apache-2.0"
repository = "https://github.com/junoclaw/junoclaw"

[dependencies]
sha2 = { version = "0.10", default-features = false }
sha3 = { version = "0.10", default-features = false }
aes = { version = "0.8", default-features = false }
sriracha-mayo = { version = "0.0.4", optional = true }

[dev-dependencies]
hex-literal = "0.4"
hex = "0.4"
rand_chacha = "0.3"
rand_core = "0.6"

[features]
default = []
std = ["sha2/std", "sha3/std"]
test-c = ["sriracha-mayo", "std"]
