[package]
name = "plugin-llm"
version = "0.1.0"
edition = "2021"
description = "JunoClaw LLM provider plugin (Ollama, Anthropic, OpenAI)"

[dependencies]
junoclaw-core = { path = "../../crates/junoclaw-core" }
async-trait = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
